--- a/app_bolos/Dockerfile
+++ b/app_bolos/Dockerfile
@@ -1,17 +1,22 @@
 # Usa una imagen oficial de Node.js como base
-FROM node:16
+FROM node:18
 
+WORKDIR /app/
 # Configura el directorio de trabajo dentro del contenedor
-WORKDIR /app
 
 # Copia el archivo package.json y package-lock.json (si existe)
+
+RUN mkdir -p ./public ./views
+
 COPY package*.json ./
+COPY public/ ./public/
+COPY views/ ./views/
+COPY server.js ./
 
 # Instala las dependencias
 RUN npm install
 
-# Copia el resto del código de tu aplicación al contenedor
-COPY . .
+# Crea las carpetas necesarias para mantener la estructura
 
 # Expone el puerto en el que tu aplicación escucha (por ejemplo, 80 o 3000)
 EXPOSE 80
